[package]
authors = ["Marc Brinkmann <git@marcbrinkmann.de>",
          "Denys Vitali <denys@denv.it>"]
name = "poppler"
license = "GPL-2.0"
version = "0.3.0"
description = "Wrapper for the GPL-licensed Poppler PDF rendering library."
repository = "https://github.com/DMSrs/poppler-rs"
edition = "2018"

[dependencies]
poppler-sys = { version = "*", path = "poppler-sys" }
cairo-rs = { version = "*", features = ["png", "pdf"]}
glib = "*"
glib-sys = "*"
gobject-sys = "*"

[features]
default = []
generate-bindings = ["poppler-sys/generate-bindings"]